--- a/portfolio.html
+++ b/portfolio.html
@@ -1,25 +1,105 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>portfolio</title>
-    </head>
-    <body>
-        <h1 style="text-align: center;">S.HELLAN MITHULA</h1>
-        <hr>
-        <h2>personal details:</h2>
-        <pre>     NAME:S.Hellan Mithula
-     TITLE:Artificial Intelligence and Data Sciencce student | Java & DSA Enthusiast
-     EMAIL:<a href="mailto:hellanmithula@gmail.com">hellanmithuula@gmail.com</a>
-     LINKEDIN:<a href="https://www.linkedin.com/in/hellan-mithula-5a36282a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">contact me through linkedin</a>
-     GITHUB:<a href="https://github.com/Hellanmithula">Github Link</a>
-       </pre>
-       <h2>About:</h2>
-       <p> I am a 3rd-year Artificial Intelligence and Data Science student with a strong passion for solving real-world problems using technology. Currently mastering Java and Data Structures & Algorithms, I aim to secure an internship at Google and build impactful AI-driven projects.</p>
-       <h2>Skills:</h2>
-       <ul>
-           <li><b>Programming Languages:</b>java,python,c,html,css,javascript</li>
-           <li><b>Tools & FrameWorks:</b>Flutter,Git,VS code,TensorFlow(Beginner)</li>
-           <li><b>Concepts:</b>DSA,Machine Learning Basics,IoT Systems</li>
-       </ul>
+<head>
+  <title>Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: black;
+      color: white;
+      padding: 30px 0;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    nav {
+      background-color: #222;
+      text-align: center;
+      padding: 15px 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 20px;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    nav a:hover {
+      color: #ffd700;
+    }
+
+    section {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background-color: white;
+      margin-top: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    ul {
+      line-height: 1.8;
+    }
+
+    pre {
+      font-size: 16px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>S.HELLAN MITHULA</h1>
+    <p>Aspiring Developer | AI & DS Student</p>
+  </header>
+
+  <nav>
+    <a href="#personal">Personal Details</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+  </nav>
+
+  <section id="personal">
+    <h2>Personal Details</h2>
+    <pre>
+NAME: S.Hellan Mithula
+TITLE: Artificial Intelligence and Data Science Student | Java & DSA Enthusiast
+EMAIL: <a href="mailto:hellanmithula@gmail.com">hellanmithula@gmail.com</a>
+LINKEDIN: <a href="https://www.linkedin.com/in/hellan-mithula-5a36282a5">contact me through LinkedIn</a>
+GITHUB: <a href="https://github.com/Hellanmithula">GitHub Link</a>
+    </pre>
+  </section>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      I am a 3rd-year Artificial Intelligence and Data Science student with a strong passion for solving real-world problems using technology. 
+      Currently mastering Java and Data Structures & Algorithms, I aim to secure an internship at Google and build impactful AI-driven projects.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li><b>Programming Languages:</butter, Git, VS Code, TensorFlow (Beginner)</li>
+      <li><b>Concepts:</b> DSA, Machine > Java, Python, C, HTML, CSS, JavaScript</li>
+      <li><b>Tools & Frameworks:</b> FlLearning Basics, IoT Systems</li>
+    </ul>
+  </section>
+
+</body>
+</html>
     </body>
 </html>
